--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -36,6 +36,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="22sp"
+                    android:text="NewsApp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
